[gd_scene load_steps=12 format=3 uid="uid://41ksep4r83ci"]

[ext_resource type="PackedScene" uid="uid://bv5c7xctnampi" path="res://player.tscn" id="1_tqs5b"]
[ext_resource type="Script" path="res://Main.gd" id="1_ubf3c"]
[ext_resource type="PackedScene" uid="uid://drtcqtf5novpo" path="res://mob.tscn" id="2_bwh0l"]
[ext_resource type="FontFile" uid="uid://bwai3d868ol4l" path="res://fonts/Montserrat-Medium.ttf" id="4_qe36e"]
[ext_resource type="Script" path="res://score_label.gd" id="5_dhi68"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5ekpp"]
size = Vector3(60, 3, 60)

[sub_resource type="BoxMesh" id="BoxMesh_ahhsw"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1wmm5"]
albedo_color = Color(0.588235, 0.141176, 0.976471, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ttiad"]
material = SubResource("StandardMaterial3D_1wmm5")

[sub_resource type="Curve3D" id="Curve3D_ge24x"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -13.0241, 0, -14.002, 0, 0, 0, 0, 0, 0, 13.0241, 0, -14.0909, 0, 0, 0, 0, 0, 0, 12.9352, 0, 15.2466, 0, 0, 0, 0, 0, 0, -12.9352, 0, 15.1577, 0, 0, 0, 0, 0, 0, -13.0241, 0, -14.002),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Theme" id="Theme_o5vdy"]
default_font = ExtResource("4_qe36e")
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_ubf3c")
mob_scene = ExtResource("2_bwh0l")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_5ekpp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_ahhsw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_tqs5b")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)
projection = 1
size = 19.0
far = 100.0

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, -14)
mesh = SubResource("CylinderMesh_ttiad")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 15)
mesh = SubResource("CylinderMesh_ttiad")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -14)
mesh = SubResource("CylinderMesh_ttiad")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, 15)
mesh = SubResource("CylinderMesh_ttiad")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_ge24x")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(0.00341267, 0, -0.999993, 0, 1, 0, 0.999993, 0, 0.00341267, -13.0241, 0, -14.002)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_o5vdy")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 100.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_dhi68")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.282353, 0, 0.658824, 0.215686)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 28.0
text = "Press enter to retry"

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
